--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     width: 100%;
     margin-top: 0;
     background-color: black;
-    color: white;
+    color: black;
     text-align: center;
 }
 body {
